# pyJikangai

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml
example/: attendance.csv  example.py
src/jikangai/: __init__.py  attendance_factory.py  jikangai.py
tests/: test_jikangai.py
