[project]
name = "jikangai"
version = "0.1"
description = "A Python library that analyzes operating hours based on the Japanese MHLW overtime work limit regulation"
readme = "README.md"
license = {file = "LICENSE.txt"}
maintainers = [{name = "Daisuke Fuji", email = "daisukefuji@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python"
]
requires-python = ">=3.7"
dependencies = ["peppercorn"]
keywords = ["jikangai", "MHLW", "overtime"]
authors = [{name = "Daisuke Fuji", email = "daisukefuji@users.noreply.github.com" }]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/fujimx/pyJikangai"
"Bug Reports" = "https://github.com/fujimx/pyJikangai/issues"
"Source" = "https://github.com/fujimx/pyJikangai"

[project.scripts]
jikangai = "jikangai:main"

[tool.setuptools]
package-data = {"jikangai" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"